---------------------------------------------------------------------------------------------------
Version: 0.16.0
Date: ????
  Features:
    - Added `flib_data_util.all()`, `flib_data_util.get()` for interacting with prototypes via their base type.
  Bugfixes:
    - Removed icon mipmaps properties from `data-util`; icon mipmaps are now automatically deduced by the game engine.
    - Fixed a crash when attempting to use the `gui-templates` module due to an outdated require path. (#72)
---------------------------------------------------------------------------------------------------
Version: 0.15.0
Date: 2024-10-14
  Features:
    - Added support for ronna and quetta SI prefixes to `flib_format.number`.
  Changes:
    - Updated to Factorio 2.0.
    - Removed `flib_direction.north` etc. constants. Use `defines.direction` instead.
    - Renamed `gui-lite` to `gui`, and `dictionary-lite` to `dictionary`.
    - Removed deprecated modules.
---------------------------------------------------------------------------------------------------
Version: 0.14.2
Date: 2024-07-28
  Bugfixes:
    - [dictionary-lite] Fixed that the first translation in a re-requested batch would be skipped.
    - [math] Fixed that the `sum` function was ignoring the first element. (#69)
    - Fixed that the `flib_tool_button_light_green` GUI style had a built-in tooltip. (#68)
---------------------------------------------------------------------------------------------------
Version: 0.14.1
Date: 2024-05-10
  Changes:
    - Adjusted technology slot GUI template to work with Ultimate Research Queue.
  Bugfixes:
    - Fixed that the technology slot GUI styles did not have selected styles.
---------------------------------------------------------------------------------------------------
Version: 0.14.0
Date: 2024-03-29
  Features:
    - Added `gui-lite.format_handlers` function.